--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
 <meta charset="UTF-8">  
 <met name="viewport" content="width=device-width,initial-sacale=1.0">
-<title>Meu Site simples</title>
+<title>sergipe tec</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
-<h1>Bem-vindo ao Meu Site</h1>
+<h1>sergipe tec
+</h1>
 </header>
 <nav>
 <ul>
 <li><a href="#">Página Inicial</a></li>
-<li><a href="#">Sobre</a></li>
+<li><a href="#">quem e a gente </a></li>
 <li><a href="#">Contato</a></li>
 </ul>
 </nav>
@@ -24,7 +25,7 @@
 </section>
 </main>
 <footer>
-<p>&copy;2024 Meu Site Simples</p>
+<p>são cristovão - sergipe</p>
 </footer>
 </body>
 </html>
